syntax = "proto3";

package service.ourchat.session.invite_to_session.v1;

import "service/ourchat/session/new_session/v1/session.proto";

message InviteToSessionRequest {
  uint64 session_id = 1;
  uint64 invitee = 2;
  string leave_message = 3;
}

message InviteToSessionResponse {
  optional service.ourchat.session.new_session.v1.FailedMember failed_member = 1;
}

message AcceptSessionNotification {
  uint64 session_id = 1;
  uint64 invitee_id = 2;
  bool accepted = 3;
  optional bytes public_key = 4;
}
